# FaceGenderAgeAIDetector

./: CMakeLists.txt  main.cpp
